--- a/styles.css
+++ b/styles.css
@@ -229,6 +229,43 @@ section {
     padding: 20px;
     color: #333;
     font-size: 1.2em;
-    font-family: 'meetcute';
+    font-family: 'Times New Roman';
     font-weight: thin;
+}
+
+#tech-stack {
+    text-align: center;
+    margin-bottom: 40px; /* Slightly increased margin for better spacing */
+}
+
+#tech-stack h2 {
+    font-family: "dogica", sans-serif; /* Ensures the font only applies to h2 */
+    font-size: 2rem; /* You can adjust this as needed */
+    color: #d25b88;
+    text-decoration: wavy underline;
+    margin-bottom: 20px; /* Space between h2 and badges */
+}
+
+.tech-stack-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px; /* Adjust space between badges */
+}
+
+.badges img {
+    height: 40px; /* Adjust the badge size */
+    width: auto;
+}
+
+@media (max-width: 768px) {
+    nav ul {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .tech-stack-container, .social-icons {
+        flex-direction: column;
+        gap: 10px;
+    }
 }
